2003-09-23  Thierry Bothorel <thierry_bo@users.sourceforge.net>

	* NEWS (1.3): Doc fixes.

2003-09-23  Thierry Bothorel <thierry_bo@users.sourceforge.net>

	* AUTHENTICATION (1.17), INSTALL (1.14), LANGUAGE (1.10),
	  README.nwauth (1.3), README.sqlapi (1.3), ROXEN (1.3),
	  grant.pg.sql (1.3), testdata.php (1.3): Finally we changed
	  config.inc to config.inc.php for "security" reasons.

2003-09-17  Thierry Bothorel <thierry_bo@users.sourceforge.net>

	* AUTHENTICATION, INSTALL, LANGUAGE, NEWS, PEAR, README,
	  README.nwauth, README.sqlapi, ROXEN, TODO, UPGRADE,
	  auth_cookie_ext.inc, auth_ldap.pl, auth_ldapsearch.pl, badpw.pl,
	  destroy.pg.sql, destroy.php, grant.pg.sql, mrbs.schema.xml,
	  mrbs_create.php, purge.my.sql, purge.pg.sql, purge.php,
	  sample-data.sql, tables.my.sql, tables.pg.sql, testdata.php,
	  upgrade.my.sql, upgrade2.my.sql, upgrade2.pg.sql
	  (mrbs_MDB-branch.[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1]):
	  1st commit mrbs_MDB-branch (Files removes, added, modified from
	  the existing cvs).
	  
2003-08-09  Thierry Bothorel <thierry_bo@users.sourceforge.net>

	* AUTHENTICATION (1.16): + Added Windows NT / IIS authentication
	  scheme.

2003-08-09  Thierry Bothorel <thierry_bo@users.sourceforge.net>

	* AUTHENTICATION (1.15), INSTALL (1.13), README (1.9): Dox fixes.
	  Update documentation and comments to the current cvs situation.

2003-08-07  Thierry Bothorel <thierry_bo@users.sourceforge.net>

	* NEWS (1.2): * Doc fixes: updated to have a consistent layout.

2003-08-07  Thierry Bothorel <thierry_bo@users.sourceforge.net>

	* NEWS (1.1): * Added a NEWS file which contains a list of
	  user-visible changes worth mentioning (as per GNU Coding
	  Standards). Content pasted from the previous ChangeLog file which
	  was a NEWS file in fact, except last CVS entries which should go
	  to the ChangeLog file.

2003-01-09  Daniel <nambit@users.sourceforge.net>

	* AUTHENTICATION (1.14, mrbs-1-1): add a note about using APOP
